[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banxe-trading-backend"
version = "0.1.0"
description = "Network transport for ExchangePort (WS order-book + REST orders/rate/symbols) + MarketDataPort — ADR-021 skeleton"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "websockets==14.1",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
  "mypy==1.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path/Body in argument defaults are the idiomatic DI
# pattern, not mutable-default bugs.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Body",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
packages = ["banxe_trading_backend"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true
